--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
     <string name="Username">username</string>
     <string name="Password">password</string>
     <string name="Login">login</string>
-    <string name="log_in">Log In</string>
+    <string name="log_in">Log in</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="logout">Logout</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="contact_support">Contact Support</string>
 </resources>
