--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="logout">Logout</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="contact_support">Contact Support</string>
+    <string name="some_error">Some Error Occured</string>
 </resources>
